# relativity-dashboard

./: .gitignore  CMakeLists.txt  README.md  index.html  mission.csv  style.css
data/: solar_system_horizons_2026-01-01.csv
include/relativity/: simulation.hpp
src/: charts.js  main.js  physics.js  ui.js  visualization.js
src/cli/: main.cpp
src/lib/: simulation.cpp
src/visualizer/: main.cpp
tests/: simulation_tests.cpp
